--- a/TennisStoreClient/_Imports.razor
+++ b/TennisStoreClient/_Imports.razor
@@ -9,6 +9,9 @@
 @using TennisStoreClient
 @using TennisStoreClient.Layout
 
+@using TennisStoreSharedLibrary.Contracts
 @using TennisStoreSharedLibrary.Models
+@using Syncfusion.Blazor.Navigations
 
 @inject IJSRuntime js
+@inject IProduct ClientService
