#Add FeaturedProductsComponent # Some updates

--- a/TennisStoreClient/Layout/NavigationBar.razor
+++ b/TennisStoreClient/Layout/NavigationBar.razor
@@ -8,7 +8,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse fw-bold" id="navbarSupportedContent" style="margin-left:25px">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-family:MyFont">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-family:sans-serif;">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 </li>
