--- a/TennisStoreClient/Pages/Home.razor
+++ b/TennisStoreClient/Pages/Home.razor
@@ -1,3 +1,6 @@
 ﻿@page "/"
 
 <FronPageComponent></FronPageComponent>
+<div class="col-md-12 mt-5">
+    <FeaturedProductsComponent></FeaturedProductsComponent>
+</div>
