--- a/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/AddOrUpdateProductComponent.razor
@@ -1,4 +1,5 @@
 ﻿@page "/add-product"
+@using TennisStoreClient.Pages.OtherPages
 
 <div class="container">
     <div class="row">
@@ -34,11 +35,11 @@
                     </div>
                     <div class="card-footer">
                         <div class="form-group mt-3">
-                            @if (ShowSaveButton)
+                            @if (messageDialogService.ShowSaveButton)
                             {
                                 <button type="submit" class="btn btn-outline-primary"><i class="fa fa-plus"></i>Save Product</button>
                             }
-                            <BusyButtonComponent ShowBusyButton="ShowBusyButton"></BusyButtonComponent>
+                            <BusyButtonComponent ShowBusyButton="messageDialogService.ShowBusyButton"></BusyButtonComponent>
                         </div>
                     </div>
                 </div>
@@ -46,7 +47,7 @@
         </div>
     </div>
 </div>
-<MessageDialog @ref="messageDialog"></MessageDialog>
+<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
 
 
 @code {
@@ -55,16 +56,16 @@
 
     async Task HandleSaveProduct()
     {
-        ShowSaveButton = false;
-        ShowBusyButton = !ShowSaveButton;
+        messageDialogService.ShowSaveButton = false;
+        messageDialogService.ShowBusyButton = !ShowSaveButton;
         if (string.IsNullOrEmpty(MyProduct.Base64Img))
         {
-            messageDialog!.SetDialogValues("warning", "You need to choose image");
+            messageDialogService.messageDialog!.SetDialogValues("warning", "You need to choose image");
             SetMessageDialog();
             return;
         }
 
-        var (flag, message) = await ClientService.AddProduct(MyProduct);
+        var (flag, message) = await ProductService.AddProduct(MyProduct);
         if (flag)
             messageDialog!.SetDialogValues("success", message);
         else
