--- a/TennisStoreClient/Pages/ProductPages/FronPageComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/FronPageComponent.razor
@@ -1,14 +1,15 @@
 ﻿@page "/front"
+@implements IDisposable
 
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            @if (FeaturedProductsList!.Any())
+            @if (ProductService.FeaturedProducts is not null)
             {
                 <div class="control-container text-dark">
                     <SfCarousel ButtonsVisibility="CarouselButtonVisibility.VisibleOnHover" AnimationEffect="CarouselAnimationEffect.Slide" AutoPlay="true" ShowIndicators="true">
                         <ChildContent>
-                            @foreach (Product product in FeaturedProductsList!.OrderByDescending(_ => _.DateUploaded).Take(5)!)
+                            @foreach (Product product in ProductService.FeaturedProducts.OrderByDescending(_ => _.DateUploaded).Take(5)!)
                             {
                                 <CarouselItem>
                                     <figure>
@@ -70,7 +71,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await RetrieveFeaturedProducts();
+        bool featured = true;
+        await ProductService.GetAllProducts(featured);
+        ProductService.ProductAction += StateHasChanged;
     }
 
     private async Task RetrieveFeaturedProducts()
@@ -95,4 +98,6 @@
         int descriptionLength = description.Length;
         return descriptionLength > maxLength ? $"{description.Substring(0, 100)}{appendDots}" : description;
     }
+
+    public void Dispose() => ProductService.ProductAction -= StateHasChanged;
 }
