--- a/TennisStoreClient/_Imports.razor
+++ b/TennisStoreClient/_Imports.razor
@@ -12,6 +12,8 @@
 @using TennisStoreClient.Services
 @using TennisStoreSharedLibrary.Models
 @using Syncfusion.Blazor.Navigations
+@using TennisStoreClient.Pages.OtherPages
+@using TennisStoreClient.Pages.ProductPages
 
 @inject IJSRuntime js
 @inject IProductService ProductService
