--- a/TennisStoreClient/_Imports.razor
+++ b/TennisStoreClient/_Imports.razor
@@ -14,6 +14,7 @@
 @using Syncfusion.Blazor.Navigations
 @using TennisStoreClient.Pages.OtherPages
 @using TennisStoreClient.Pages.ProductPages
+@using TennisStoreClient.Pages.CategoryPages
 
 @inject IJSRuntime js
 @inject IProductService ProductService
