--- a/TennisStoreClient/Pages/CategoryPages/CategoriesPage.razor
+++ b/TennisStoreClient/Pages/CategoryPages/CategoriesPage.razor
@@ -2,19 +2,19 @@
 
 @if (CategoryService.AllCategories is not null)
 {
-    <div class="card sticky-top" style="font-family:Tahoma; max-height:50%; overflow:scroll;">
+    <div class="card sticky-top" style="font-family:Tahoma; max-height:100%; overflow:scroll;">
         <div class="card-header">Product Categories</div>
         <div class="card-body">
             <div class="list-group">
-                <button type="button" @onclick="DeafaultCategoryClicked" class="list-group-item list-group-item-action @(CategoryId == 0 ? "active" : "" )"> 
-                    <i class="fa fa-object-select"></i>All
-                </button> 
+                <button type="button" @onclick="DeafaultCategoryClicked" class="list-group-item list-group-item-action @(CategoryId == 0 ? "active" : "" )">
+                    <i class="fa fa-object-group"></i>All
+                </button>
                 @foreach (var item in CategoryService.AllCategories)
                 {
                     var category = item;
                     <button type="button" @onclick="()=> CategoryClicked(category.Id)"
-                            class="list-group-item list-group-item-action mt-3 fw-bold @(CategoryId == 0 ? "active" : "")">
-                           @category.Name!.ToUpper();
+                            class="list-group-item list-group-item-action mt-3 fw-bold @(category.Id == CategoryId? "active" : "")">
+                        @category.Name!.ToUpper()
                     </button>
                 }
             </div>
@@ -23,13 +23,13 @@
 }
 
 <style>
-    .card-header{
-        height:60px;
-        text-align:center;
+    .card-header {
+        height: 60px;
+        text-align: center;
         padding: 10px;
-        font-size:26px;
+        font-size: 26px;
         font-family: Impact;
-        color:darkslategrey;
+        color: darkslategrey;
     }
 </style>
 
