--- a/TennisStoreClient/Pages/ProductPages/FeaturedProductsComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/FeaturedProductsComponent.razor
@@ -1,37 +1,40 @@
-﻿<div class="container-fluid mt-5">
-    <div class="row">
-        <div class="col-md-12 col-sm-12">
-            <hr />
-            <span style="font-family:sans-serif;">Featured</span>
-            <div class="card border-0">
-                <div class="card-body">
-                    <div class="d-flex justify-content-evenly align-items-center">
-                        <img src="../resources/lessthan.png" width="50" height="50" id="StyleCursor" @onclick="PreviusButton" />
-                        @if (FeaturedProducts is null) return;
-                        @foreach (var item in FeaturedProducts)
-                        {
-                            <div class="card">
-                                <div class="card-body">
-                                    @if (item.DateUploaded.AddDays(30) < DateTime.Now)
-                                    {
-                                        <span class="badge bg-primary d-flex align-items-center float-end" style="width:50px;">New</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="badge bg-none d-flex align-items-center float-end" style="width:50px;height:20px;"></span>
-                                    }
-                                    <img class="card-img-top childImage" src="@item.Base64Img" width="150" height="200" style="max-width:150px;min-width:150px;" />
-                                    <div id="productCover" class="bg-secondary text-white d-flex justify-content-center text-wrap">@item.Name</div>
+﻿@if (!ProductService.IsVisible)
+{
+    <div class="container-fluid mt-5">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <hr />
+                <span style="font-family:sans-serif;">Featured</span>
+                <div class="card border-0">
+                    <div class="card-body">
+                        <div class="d-flex justify-content-evenly align-items-center">
+                            <img src="../resources/lessthan.png" width="50" height="50" id="StyleCursor" @onclick="PreviusButton" />
+                            @if (FeaturedProducts is null) return;
+                            @foreach (var item in FeaturedProducts)
+                            {
+                                <div class="card">
+                                    <div class="card-body">
+                                        @if (item.DateUploaded.AddDays(30) < DateTime.Now)
+                                        {
+                                            <span class="badge bg-primary d-flex align-items-center float-end" style="width:50px;">New</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="badge bg-none d-flex align-items-center float-end" style="width:50px;height:20px;"></span>
+                                        }
+                                        <img class="card-img-top childImage" src="@item.Base64Img" width="150" height="200" style="max-width:150px;min-width:150px;" />
+                                        <div id="productCover" class="bg-secondary text-white d-flex justify-content-center text-wrap">@item.Name</div>
+                                    </div>
                                 </div>
-                            </div>
-                        }
-                        <img src="../resources/greaterthan.png" width="50" id="StyleCursor" @onclick="NextButton" />
+                            }
+                            <img src="../resources/greaterthan.png" width="50" id="StyleCursor" @onclick="NextButton" />
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+}
 
 
 <style>
@@ -92,12 +95,12 @@
     {
         FeaturedProducts?.Clear();
         FeaturedProducts = incomingProduct;
-    } 
+    }
 
     private async void NextButton()
     {
         if (Skip > ProductService.FeaturedProducts.Count()) return;
-        var getNextProducts = await SkipAndTake(Skip , Take);
+        var getNextProducts = await SkipAndTake(Skip, Take);
         Skip += PageSize;
         AddToFeturedProducts(getNextProducts);
     }
