--- a/TennisStoreClient/Pages/ProductPages/ProductListHomePage.razor
+++ b/TennisStoreClient/Pages/ProductPages/ProductListHomePage.razor
@@ -1,19 +1,32 @@
 ﻿@page "/products"
 @implements IDisposable
-
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-lg-2">
-            <CategoriesPage CategoryClickedEvent="CategoryClickedEvent" DeafaultCategoryClickedEvent="DeafaultCategoryClickedEvent" />
-        </div>
-        <div class="col-lg-10">
-            <div class="card border-0">
-                <div class="card-header border-success mb-2"></div>
-                <ProductListPage AllProducts="ProductService.ProductsByCategory ?? ProductService.AllProducts" />
+@if (ProductService.IsVisible)
+{
+    <LoadingPage />
+}
+else
+{
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-2">
+                <CategoriesPage CategoryClickedEvent="CategoryClickedEvent" DeafaultCategoryClickedEvent="DeafaultCategoryClickedEvent" />
+            </div>
+            <div class="col-lg-10">
+                <BannerPage />
+                <div class="card border-0">
+                    <div class="card-header border-success mb-2"></div>
+                    <ProductListPage AllProducts="ProductService.ProductsByCategory ?? ProductService.AllProducts" />
+                </div>
+            </div>
+            <div class="col-lg-12 mt-5">
+                <div class="card border-0" style="position:absolute;left:1px;right:1px;">
+                    <div class="card-header border-dark-subtle">Recommended Products</div>
+                    <RecommendedPage />
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
 
 @code {
     protected override async Task OnInitializedAsync()
