--- a/TennisStoreClient/Pages/ProductPages/ProductListPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/ProductListPage.razor
@@ -11,7 +11,7 @@
                             <ul class="featured__item__pic__hover">
                                 <li><a href="#"><i class="fa fa-heart"></i></a></li>
                                 <li><a href="#"><i class="fa fa-retweet"></i></a></li>
-                                <li><a href="#"><i class="fa fa-shopping-cart text-danger"></i></a></li>
+                                <li><a href="#"><i class="fa fa-cart-shopping text-danger"></i></a></li>
                             </ul>
                         </div>
                         <div class="featured__item__text">
