--- a/TennisStoreClient/_Imports.razor
+++ b/TennisStoreClient/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -15,8 +16,13 @@
 @using TennisStoreClient.Pages.OtherPages
 @using TennisStoreClient.Pages.ProductPages
 @using TennisStoreClient.Pages.CategoryPages
+@using TennisStoreSharedLibrary.DTOs
+
 
 @inject IJSRuntime js
 @inject IProductService ProductService
 @inject ICategoryService CategoryService
+@inject IUserAccountService accountService
 @inject MessageDialogService messageDialogService
+@inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager NavManager 
