--- a/TennisStoreClient/Layout/NavigationBar.razor
+++ b/TennisStoreClient/Layout/NavigationBar.razor
@@ -20,7 +20,7 @@
                     <a class="nav-link active" aria-current="page" href="#">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center" href="/front">PRODUCTS</a>
+                    <a class="nav-link d-flex align-items-center" href="/products">PRODUCTS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center">SERVICES</a>
@@ -36,10 +36,26 @@
                         ACCOUNT
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="font-family:sans-serif;">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <AuthorizeView>
+                            <Authorized>
+                                <li>
+                                    <button class="btn btn-danger btn-none"><i class="fa fa-lock-open"></i>Logout</button>
+                                </li>
+                            </Authorized>
+                            <NotAuthorized>
+                                @{
+                                    string login = "login";
+                                    string register = "register";
+                                }
+                                <li>
+                                    <button class="btn btn-none" @onclick="() => NavigateTo(login)"><i class="fa fa-lock-open"></i>Login</button>
+                                </li>
+                                <li><hr class="dropdown-divider" /></li>
+                                <li>
+                                    <button class="btn btn-none" @onclick="() => NavigateTo(register)"><i class="fa fa-sign-in-alt"></i>Register</button>
+                                </li>
+                            </NotAuthorized>
+                        </AuthorizeView>
                     </ul>
                 </li>
             </ul>
@@ -51,14 +67,13 @@
             }
             @if (ShowSearch)
             {
-               <SearchComponent></SearchComponent>
+                <SearchComponent></SearchComponent>
             }
-
         </div>
     </div>
 </nav>
 
-@code{
+@code {
     public bool ShowSearch { get; set; }
     public bool ShowSearchIcon { get; set; }
 
@@ -67,4 +82,6 @@
         ShowSearch = true;
         ShowSearchIcon = !ShowSearch;
     }
+
+    void NavigateTo(string url) => NavManager.NavigateTo($"identity/account/{url}");
 }
