--- a/TennisStoreClient/Pages/AccountPages/LoginPage.razor
+++ b/TennisStoreClient/Pages/AccountPages/LoginPage.razor
@@ -13,7 +13,7 @@
                     <div class="card-body">
                         <div class="form-group mt-3">
                             <label class="form-label">Email</label>
-                            <InputText @bind="User.Email" class="form-control"></InputText>
+                            <InputText @bind-Value="User.Email" class="form-control"></InputText>
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label">Password</label>
