--- a/TennisStoreClient/Pages/AccountPages/RegisterPage.razor
+++ b/TennisStoreClient/Pages/AccountPages/RegisterPage.razor
@@ -16,7 +16,7 @@
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label">Email</label>
-                            <InputText @bind="User.Email" class="form-control"></InputText>
+                            <InputText @bind-Value="User.Email" class="form-control"></InputText>
                         </div>
                         <div class="form-group mt-3">
                             <label class="form-label">Password</label>
