--- a/TennisStoreClient/_Imports.razor
+++ b/TennisStoreClient/_Imports.razor
@@ -23,6 +23,9 @@
 @inject IProductService ProductService
 @inject ICategoryService CategoryService
 @inject IUserAccountService accountService
+@inject ICart cartServiec
+
+
 @inject MessageDialogService messageDialogService
 @inject AuthenticationStateProvider AuthStateProvider
 @inject NavigationManager NavManager 
