--- a/TennisStoreClient/Pages/Home.razor
+++ b/TennisStoreClient/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<FronPageComponent></FronPageComponent>
+<FrontPageComponent></FrontPageComponent>
 <div class="col-md-12 mt-5">
     <FeaturedProductsComponent></FeaturedProductsComponent>
 </div>
