--- a/TennisStoreClient/Pages/ProductPages/FrontPageComponent.razor
+++ b/TennisStoreClient/Pages/ProductPages/FrontPageComponent.razor
@@ -1,4 +1,5 @@
 ﻿@page "/front"
+@using TennisStoreSharedLibrary.Responses
 @implements IDisposable
 
 @if (ProductService.IsVisible)
@@ -19,14 +20,14 @@ else
                                 {
                                     <CarouselItem>
                                         <figure>
-                                            <img src="@product.Base64Img" width="250" height="380" class="float-end" />
+                                            <img src="@product.Base64Img" width="250" height="380" class="float-end" style="cursor:pointer;" @onclick="() => ViewProduct(product)" />
                                         </figure>
                                         <div class="d-flex justify-content-center">
                                             <div style="position:absolute; bottom:50px">
                                                 <div class="vstack gap-3 mb-3">
                                                     <div>
                                                         <p>
-                                                            <span style="font-family:Impact; text-indent:2px;" class="text-dark fw-bold display-2">
+                                                            <span style="font-family:Impact; text-indent:2px; cursor:pointer;" class="text-dark fw-bold display-2" @onclick="() => ViewProduct(product)">
                                                                 @product.Name
                                                                 <sup style="font-family:'Courier New'">
                                                                     <span class="badge rounded-pill bg-primary fs-6">@(GetNewLabel(product.DateUploaded))</span>
@@ -42,8 +43,8 @@ else
                                                     <p class="text-muted fs-5 w-75" style="text-align:justify-all;font-family:Cambria">@(General.GetDescription(product.Description!))</p>
                                                 </div>
                                                 <div class="hstack gap-1 d-flex justify-content-center">
-                                                    <button class="btn btn-secondary fw-bold" id="styleButton"><i class="fa fa-list">Details</i></button>
-                                                    <button class="btn btn-outline-danger fw-bold" id="styleButton"><i class="fa fa-cart-plus">BUY NOW</i></button>
+                                                    <button class="btn btn-secondary fw-bold" id="styleButton" style="cursor:pointer;" @onclick="() => ViewProduct(product)"><i class="fa fa-list"></i>Details</button>
+                                                    <button class="btn btn-outline-danger fw-bold" id="styleButton" style="cursor:pointer;" @onclick="() => AddToCart(product)"><i class="fa fa-cart-plus"></i>BUY NOW</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -72,6 +73,8 @@ else
         </div>
     </div>
 }
+<MessageDialog @ref="messageDialogService.messageDialog"></MessageDialog>
+
 
 @code {
     List<Product>? FeaturedProductsList = new();
@@ -81,6 +84,7 @@ else
         bool featured = true;
         await ProductService.GetAllProducts(featured);
         ProductService.ProductAction += StateHasChanged;
+        messageDialogService.Action += StateHasChanged;
     }
 
     private async Task RetrieveFeaturedProducts()
@@ -98,5 +102,23 @@ else
         return productDateAfterUploaded <= maxDays ? "New" : null!;
     }
 
-    public void Dispose() => ProductService.ProductAction -= StateHasChanged;
+    async Task AddToCart(Product product) => DisplayResponse(await cartServiec.AddToCart(product));
+
+    void ViewProduct(Product product) => NavManager.NavigateTo($"/products/{product.Id}");
+
+    private void DisplayResponse(ServiceResponse serviceResponse)
+    {
+        if (serviceResponse.Flag)
+            messageDialogService.messageDialog!.SetDialogValues("success", serviceResponse.Message);
+        else
+            messageDialogService.messageDialog!.SetDialogValues("warning", serviceResponse.Message);
+
+        messageDialogService.SetMessageDialog();
+    }
+
+    public void Dispose()
+    {
+        ProductService.ProductAction -= StateHasChanged;
+        messageDialogService.Action -= StateHasChanged;
+    }
 }
