--- a/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
+++ b/TennisStoreClient/Pages/ProductPages/RecommendedPage.razor
@@ -14,10 +14,10 @@
                                     <div class="row">
                                         @foreach (var product in itemDictionary.Value)
                                         {
-                                            <div class="col-lg-2 card-container-display">
+                                            <div class="col-lg-2 card-container-display" style="cursor:pointer;" @onclick="() => ViewProduct(product)">
                                                 <div class="card border-success shadow">
                                                     <div class="card-body d-flex justify-content-between">
-                                                        <img src="@product.Base64Img" width="100" height="150" class="d-flex justify-content-center" style="margin-right:5px;" />
+                                                        <img src="@product.Base64Img" width="100" height="150" class="d-flex justify-content-center" style="margin-right:5px;"  />
                                                         <div class="vstack gap1">
                                                             <h5>@product.Name</h5>
                                                             <h6>@(General.GetDescription(product.Description!))</h6>
@@ -79,4 +79,6 @@
             startNumber++;
         }
     }
+
+    void ViewProduct(Product product) => NavManager.NavigateTo($"/products/{product.Id}");
 }
